--- a/calculator.html
+++ b/calculator.html
@@ -9,27 +9,28 @@
 <body>
 
     <div id="calculator">
-        <input id="display" readonly>
+        <div class="previousOutput" readonly></div>
+        <div class="currentOutput" readonly></div>
             <div id="buttons">
-                <button onclick="appendToDisplay('+')">+</button>
-                <button onclick="appendToDisplay('7')">7</button>
-                <button onclick="appendToDisplay('8')">8</button>
-                <button onclick="appendToDisplay('9')">9</button>
-                <button onclick="appendToDisplay('-')">-</button>
-                <button onclick="appendToDisplay('4')">4</button>
-                <button onclick="appendToDisplay('5')">5</button>
-                <button onclick="appendToDisplay('6')">6</button>
-                <button onclick="appendToDisplay('*')">*</button>
-                <button onclick="appendToDisplay('1')">1</button>
-                <button onclick="appendToDisplay('2')">2</button>
-                <button onclick="appendToDisplay('3')">3</button>
-                <button onclick="appendToDisplay('/')">/</button>
+                <button class="operation">+</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="operation">-</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="operation">*</button>
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="operation">/</button>
                 
-                <button onclick="appendToDisplay('0')">0</button>
-                <button onclick="appendToDisplay(',')">,</button>
+                <button class="number">0</button>
+                <button class="comma">,</button>
 
-                <button onclick="calculate()">=</button>
-                <button onclick="clearDisplay('calculate')">C</button>
+                <button class="equals">=</button>
+                <button class="deleteAll">C</button>
 
             </div>
 
